C51-326: Fix scrollbars and remove the affix

--- a/scss/components/_activity-card.scss
+++ b/scss/components/_activity-card.scss
@@ -144,6 +144,7 @@
 
 .civicase__activity__right-container {
   margin-left: auto;
+  white-space: nowrap;
 
   > * {
     display: inline-block !important;
@@ -184,6 +185,7 @@
 
 .civicase__activity-card-row--case-info {
   line-height: 2em;
+  white-space: nowrap;
 
   .civicase__contact-card {
     margin-right: 5px;
